<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.allstarz</groupId>
    <artifactId>AllStarzSelenium</artifactId>
    <version>1.0-SNAPSHOT</version>

<!--  TODO: Add properties to manage dependency version  -->
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <selenium.version>3.14.0</selenium.version>
        <common-io.version>2.4</common-io.version>
        <junit.version>4.13.1</junit.version>
        <cucumber.version>6.9.0</cucumber.version>
        <slf4j.version>1.7.29</slf4j.version>
        <aspectj.version>1.9.6</aspectj.version>
        <allure.cucumber.version>2.8.1</allure.cucumber.version>
        <allure.cucumber.adaptor.version>1.6.4</allure.cucumber.adaptor.version>
        <maven.plugin.version>3.6.2</maven.plugin.version>
        <maven.compiler.version>3.8.1</maven.compiler.version>
        <maven.surefire.version>2.20</maven.surefire.version>
        
    </properties>
    <dependencies>
    <dependency>
		    <groupId>io.github.bonigarcia</groupId>
		    <artifactId>webdrivermanager</artifactId>
		    <version>4.2.2</version>
		</dependency>
		
    	<dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>[3.14.0]</version>
        </dependency> 
    	
        <dependency>
            <groupId>org.apache.maven</groupId>
            <artifactId>maven-plugin-api</artifactId>
            <version>${maven.plugin.version}</version>
        </dependency>
        <dependency>
            <groupId>org.seleniumhq.selenium</groupId>
            <artifactId>selenium-java</artifactId>
            <version>${selenium.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>${common-io.version}</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>${junit.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-java</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>

		<!-- https://mvnrepository.com/artifact/io.cucumber/cucumber-jvm -->
		<dependency>
		    <groupId>io.cucumber</groupId>
		    <artifactId>cucumber-jvm</artifactId>
		    <version>6.9.0</version>
		    <type>pom</type>
		</dependency>
        
        <dependency>
            <groupId>io.cucumber</groupId>
            <artifactId>cucumber-junit</artifactId>
            <version>${cucumber.version}</version>
            <scope>test</scope>
        </dependency>
        
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>${slf4j.version}</version>
            <scope>test</scope>
        </dependency>
        
        <dependency>
            <groupId>org.apache.httpcomponents.client5</groupId>
            <artifactId>httpclient5</artifactId>
            <version>5.0</version>
           <!-- <scope>test</scope> Commenting this line out so that we can use HTTPClient in src/main folder-->
        </dependency>
        
            </dependencies>
            
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven.compiler.version}</version>
                <configuration>
                    <source>1.8</source>
                    <target>1.8</target>
                </configuration>
            </plugin>
            
            <plugin>
			    <groupId>org.codehaus.mojo</groupId>
			    <artifactId>versions-maven-plugin</artifactId>
			    <version>2.5</version>
			    <configuration>
			        <generateBackupPoms>false</generateBackupPoms>
			    </configuration>
			</plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>${maven.surefire.version}</version>
                <configuration>
                    <testFailureIgnore>false</testFailureIgnore>
                    
                    <argLine>
            			--illegal-access=permit
        			</argLine>
                    
                    <includes>
                        <include>**/TestRunner.java</include>
                    </includes>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjrt</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                    <dependency>
                        <groupId>org.aspectj</groupId>
                        <artifactId>aspectjweaver</artifactId>
                        <version>${aspectj.version}</version>
                    </dependency>
                </dependencies>
            </plugin>
            
            <plugin>
			    <groupId>org.apache.maven.plugins</groupId>
			    <artifactId>maven-failsafe-plugin</artifactId>
			    <version>2.22.0</version>
			    <configuration>
			        <argLine>
			            --illegal-access=permit
			        </argLine>
   		 </configuration>
		</plugin>
        </plugins>
    </build>

</project>
